// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NewPasswordForm /> render() password not of length 0 component renders correctly 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <h1
    className="title"
  >
    New Password
  </h1>
  <h3>
    Set your new password
  </h3>
  <Field
    component={[Function]}
    name="password"
    onChange={[Function]}
    validate={[Function]}
    value="fakepassword"
  />
  <button
    className="buttonSubmit"
    disabled={false}
    type="submit"
  >
    Change Password
  </button>
</form>
`;

exports[`<NewPasswordForm /> render() password of length 0 component renders correctly 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <h1
    className="title"
  >
    New Password
  </h1>
  <h3>
    Set your new password
  </h3>
  <Field
    component={[Function]}
    name="password"
    onChange={[Function]}
    validate={[Function]}
    value=""
  />
  <button
    className="buttonSubmit"
    disabled={true}
    type="submit"
  >
    Change Password
  </button>
</form>
`;
